[package]
name = "git-quickfix"
version = "0.0.2"
authors = ["Christoph Siedentop <cargo@siedentop.name>"]
edition = "2018"
license = "GPL-3.0"
description = "A small utility to apply patches outside of the current branch."
homepage = "https://github.com/siedentop/git-quickfix"
documentation = "https://github.com/siedentop/git-quickfix"
repository = "https://github.com/siedentop/git-quickfix"
readme = "README.md"

[[bin]]
name = "git-quickfix"
path = "src/main.rs"

[[bin]]
# Please let me know if you know of a better way to provide this alias?
name = "git-qf"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
incremental = false
opt-level = "z"


[dependencies]
git2 = "0.13"
structopt = "0.3"
color-eyre = { version = "0.5", default-features = false }
edit = "0.1.2"
log = "0.4.11"
env_logger = "0.7.1"