[package]
name = "git-quickfix"
version = "0.0.4"
authors = ["Christoph Siedentop <cargo@siedentop.name>"]
edition = "2018"
license = "GPL-3.0"
description = "A small utility to apply patches outside of the current branch."
homepage = "https://github.com/siedentop/git-quickfix"
documentation = "https://github.com/siedentop/git-quickfix"
repository = "https://github.com/siedentop/git-quickfix"
readme = "README.md"

[[bin]]
name = "git-quickfix"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[dependencies]
git2 = "0.13"
structopt = "0.3"
color-eyre = { version = "0.5", default-features = false }
eyre = "0.6.3"
log = "0.4.11"
env_logger = "0.8.1"

[dev-dependencies]
assert_cmd = "1.0.1"
tempdir = "0.3.7"