[package]
name = "git-quickfix"
version = "0.1.0"
authors = ["Christoph Siedentop <cargo@siedentop.name>"]
edition = "2018"
license = "GPL-3.0"
description = "A small utility to apply patches outside of the current branch."
homepage = "https://github.com/siedentop/git-quickfix"
documentation = "https://github.com/siedentop/git-quickfix"
repository = "https://github.com/siedentop/git-quickfix"
readme = "README.md"

[[bin]]
name = "git-quickfix"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[dependencies]
color-eyre = { version = "0.6.1", default-features = false }
env_logger = "0.9.0"
eyre = "0.6.3"
git2 = "0.14.4"
log = "0.4.11"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "2.0.2"
tempdir = "0.3.7"
